Fix task_add form align in chrome.

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -207,3 +207,7 @@ tbody.task-list-hover tr:hover {
     }
   }
 }
+
+form#task_form {
+  max-width: 94%;
+}
